--- a/yamls/testyaml/first_open.yaml
+++ b/yamls/testyaml/first_open.yaml
@@ -7,6 +7,6 @@ testcase:
   - element_info: com.cma.launcher.lite:id/btn_enter
     find_type: id
     operate_type: click
-check:
-  - element_info: com.cma.launcher.lite:id/recommend_wallpaper
-    find_type: id
+#check:
+#  - element_info: com.cma.launcher.lite:id/recommend_wallpaper
+#    find_type: id
