添加--no-reset，可执行多个case

--- a/yamls/testyaml/first_open.yaml
+++ b/yamls/testyaml/first_open.yaml
@@ -13,6 +13,6 @@ testcase:
   - element_info: com.cma.launcher.lite:id/recommend_wallpaper
     find_type: id
     operate_type: click
-#check:
-#  - element_info: com.cma.launcher.lite:id/recommend_wallpaper
-#    find_type: id
+check:
+  - element_info: com.cma.launcher.lite:id/wheelCoverView
+    find_type: id
