--- a/yamls/testyaml/first_open.yaml
+++ b/yamls/testyaml/first_open.yaml
@@ -1,18 +1,21 @@
 testinfo:
   - id: test00001
     title: 首次启动应用，选择推荐，进入clauncher
+
 testcase:
-  - operate_type: swipe_left
-    times: 3
-    element_info: android.widget.ImageView
-    find_type: class_name
-    swipe_time: 600
-  - element_info: com.cma.launcher.lite:id/btn_enter
-    find_type: id
-    operate_type: click
-  - element_info: com.cma.launcher.lite:id/recommend_wallpaper
-    find_type: id
-    operate_type: click
+  first_open:
+    - operate_type: swipe_left
+      times: 3
+      element_info: android.widget.ImageView
+      find_type: class_name
+      swipe_time: 600
+    - element_info: com.cma.launcher.lite:id/btn_enter
+      find_type: id
+      operate_type: click
+    - element_info: com.cma.launcher.lite:id/recommend_wallpaper
+      find_type: id
+      operate_type: click
+
 check:
   - element_info: com.cma.launcher.lite:id/wheelCoverView
     find_type: id
