[feature] wuchao's change
# Conflicts:
#	base/base_case_operate.py
#	pageobejct/base_operate.py
#	runner.py
#	testpage/folder_page.py
#	utils/adb_util.py
#	utils/apk_util.py
#	utils/demo.py

--- a/yamls/config/config.yaml
+++ b/yamls/config/config.yaml
@@ -1,4 +1,4 @@
-apk: D:\workspace\PycharmProjects\AutoTestAppium\yamls\config\CLauncher-release.apk
+apk: D:\uiTest\AutoTestAppium\yamls\config\CLauncher-release.apk
 devices:
   - platformName: Android
     port: 4723
