添加判断应用是否存在和卸载应用方法

--- a/yamls/config/config.yaml
+++ b/yamls/config/config.yaml
@@ -1,4 +1,4 @@
-apk: D:\uiTest\AutoTestAppium\yamls\config\CLauncher-release.apk
+apk: D:\workspace\AutoTestAppium\yamls\config\CLauncher-release.apk
 devices:
   - platformName: Android
     port: 4723
