--- a/yamls/config/log_config.yaml
+++ b/yamls/config/log_config.yaml
@@ -5,68 +5,42 @@ version: 1
 disable_existing_loggers: False
 
 formatters:
-
     simple:
-
         format: "%(asctime)s - %(name)s - %(levelname)s - %(message)s"
 
 handlers:
-
     console:
-
         class: logging.StreamHandler
-
         level: INFO
-
         formatter: simple
-
         stream: ext://sys.stdout
 
     info_file_handler:
-
         class: logging.handlers.RotatingFileHandler
-
         level: INFO
-
         formatter: simple
-
-        filename: "./log/info.log"
-
+        filename: ./log/info.log
         maxBytes: 10485760 # 10MB
-
         backupCount: 10
-
         encoding: utf8
 
     error_file_handler:
-
         class: logging.handlers.RotatingFileHandler
-
         level: ERROR
-
         formatter: simple
-
-        filename: "./log/errors.log"
-
+        filename: ./log/errors.log
         maxBytes: 10485760 # 10MB
-
         backupCount: 10
-
         encoding: utf8
 
 loggers:
      root:
-
         level: DEBUG
-
         handlers: [console]
 
      fileLogger:
-
         level: INFO
-
         handlers: [console, info_file_handler, error_file_handler]
-
         propagate: 0
 
 ...
