更改log配置文件

--- a/yamls/config/log_config.yaml
+++ b/yamls/config/log_config.yaml
@@ -24,7 +24,7 @@ handlers:
 
     info_file_handler:
 
-        class: logging.handlers.RotatingFileHandler
+        class: logging.handlers.TimedRotatingFileHandler
 
         level: INFO
 
