--- a/yamls/config/log_config.yaml
+++ b/yamls/config/log_config.yaml
@@ -19,6 +19,7 @@ handlers:
         class: logging.handlers.RotatingFileHandler
         level: INFO
         formatter: simple
+        args
         filename: ./log/info.log
         maxBytes: 10485760 # 10MB
         backupCount: 10
