--- a/yamls/config/log_config.yaml
+++ b/yamls/config/log_config.yaml
@@ -7,6 +7,7 @@ disable_existing_loggers: False
 formatters:
     simple:
         format: "%(asctime)s - %(name)s - %(levelname)s - %(message)s"
+        datefmt: '%Y-%m-%d %H:%M:%S'
 
 handlers:
     console:
@@ -16,20 +17,19 @@ handlers:
         stream: ext://sys.stdout
 
     info_file_handler:
-        class: logging.handlers.RotatingFileHandler
+        class: logging.handlers.TimedRotatingFileHandler
         level: INFO
         formatter: simple
-        args
-        filename: ./log/info.log
-        maxBytes: 10485760 # 10MB
-        backupCount: 10
+        filename: ../log/info.log
+        when: midnight
+        backupCount: 7
         encoding: utf8
 
     error_file_handler:
         class: logging.handlers.RotatingFileHandler
         level: ERROR
         formatter: simple
-        filename: ./log/errors.log
+        filename: ../log/errors.log
         maxBytes: 10485760 # 10MB
         backupCount: 10
         encoding: utf8
