--- a/yamls/config/log_config.yaml
+++ b/yamls/config/log_config.yaml
@@ -20,7 +20,7 @@ handlers:
         class: logging.handlers.TimedRotatingFileHandler
         level: INFO
         formatter: simple
-        filename: ../log/info.log
+        filename: info.log
         when: midnight
         backupCount: 7
         encoding: utf8
@@ -29,7 +29,7 @@ handlers:
         class: logging.handlers.RotatingFileHandler
         level: ERROR
         formatter: simple
-        filename: ../log/errors.log
+        filename: errors.log
         maxBytes: 10485760 # 10MB
         backupCount: 10
         encoding: utf8
